training-content/lab-assets/LAB-K8S-03/starter/ingress.yaml
# TODO: Write Ingress manifest
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
